tests/custom/STARIS_2022/operation-type-errors/not-type-error/stderr.expected
Error:
    Parser error in file: not-type-error.essence Error is:
ValidatorError not-type-error.essence:2:17:
  |
2 | such that b = (!5)
  |                 ^
Type error:
	Expected: bool
	Got: int

